k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esteemed
  labels:
    app: esteemed
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: esteemed
